<resources>
    <string name="app_name">Mirage TODO</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mirage TODO</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="location_activity_title">Select task location</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="location_save_location">Save</string>
    <string name="pick_place">Choose a place</string>
    <string name="location_current_title">Selected location</string>
    <string name="location_select_toast">Click on the map to select a location</string>

    <string name="task_default_title">Task</string>
    <string name="task_default_description">No description</string>
    <string name="task_edit_btn">Edit task</string>

    <string name="toolbar_title_archive">Archive</string>
    <string name="toolbar_title_todo">Current tasks</string>
    <string name="toolbar_title_done">Completed tasks</string>

    <string name="footer_new_task_btn">New task</string>
    <string name="footer_archive_btn">Archive</string>
    <string name="footer_todo_btn">TODO</string>
    <string name="footer_done_btn">Done</string>

    <string name="edit_task_toolbar_edit">Edit task</string>
    <string name="edit_task_toolbar_create">New task</string>
    <string name="edit_task_toolbar_save_btn">Save task</string>
    <string name="edit_task_toolbar_remove_btn">Remove task</string>
    <string name="edit_task_title_title">Title</string>
    <string name="edit_task_title_hint">Enter task title</string>
    <string name="edit_task_description_title">Description</string>
    <string name="edit_task_description_hint">Enter task description</string>
    <string name="edit_task_tags_title">Tags</string>
    <string name="edit_task_tags_btn">Add new tag</string>
    <string name="edit_task_full_tags_toast">All tags are already used</string>
    <string name="edit_task_location_title">Location</string>
    <string name="edit_task_location_set_btn">Set location</string>
    <string name="edit_task_location_remove_btn">Remove location</string>
    <string name="edit_task_date_title">Date</string>
    <string name="edit_task_date_not_set">Date not set</string>
    <string name="edit_task_time_title">Time</string>
    <string name="edit_task_time_not_set">Time not set</string>
    <string name="edit_task_period_title">Period</string>

    <string name="edit_task_saved_toast">Task successfully saved</string>
    <string name="edit_task_remove_toast">Task has been removed</string>
    <string name="edit_task_remove_confirm_title">Removing task</string>
    <string name="edit_task_remove_confirm_description">Do you want to remove this task?</string>
    <string name="edit_task_remove_confirm_yes_btn">Remove</string>
    <string name="edit_task_remove_confirm_cancel_btn">Cancel</string>
    <string name="edit_task_back_confirm_title">Unsaved changes</string>
    <string name="edit_task_back_confirm_description">There are unsaved changes to the task. Do you want to save them?</string>
    <string name="edit_task_back_save_btn">Save task</string>
    <string name="edit_task_back_cancel_btn">Cancel</string>
    <string name="edit_task_back_discard_btn">Discard changes</string>

    <string name="task_period_not_repeatable">Not repeatable</string>
    <string name="task_period_daily">Daily</string>
    <string name="task_period_weekly">Weekly</string>
    <string name="task_period_monthly">Monthly</string>
    <string name="task_period_yearly">Yearly</string>

    <string name="tags_new_tag_btn">New tag</string>
    <string name="tags_title">Tags</string>
    <string name="tags_rename_tag_option">Rename</string>
    <string name="tags_recolor_tag_option">Change color</string>
    <string name="tags_delete_tag_option">Delete tag</string>
    <string name="tags_search_tag_option">Search for tasks</string>
    <string name="tags_create_tag_option">Create tag</string>
    <string name="tags_cancel_option">Cancel</string>

    <string name="tags_create_title">Creating new tag</string>
    <string name="tags_create_hint">Enter tag name</string>
    <string name="tags_rename_title">Rename tag</string>
    <string name="tags_rename_hint">Enter new name</string>
    <string name="tags_recolor_title">Change color</string>
    <string name="tags_delete_title">Delete tag</string>
    <string name="tags_delete_subtitle">Are you sure you want to delete this tag?</string>
    <string name="tags_delete_yes">Yes</string>
    <string name="tags_delete_cancel">Cancel</string>

    <string name="tags_color_blue">Blue</string>
    <string name="tags_color_green">Green</string>
    <string name="tags_color_orange">Orange</string>
    <string name="tags_color_red">Red</string>
    <string name="tags_color_grey">Grey</string>
    <string name="tags_color_purple">Purple</string>

    <string name="drawer_btn_tasks">Tasks</string>
    <string name="drawer_btn_tags">Tags</string>
    <string name="drawer_btn_settings">Settings</string>

    <string name="settings_activity_title">Settings</string>
    <string name="settings_title_appearance">Appearance</string>
    <string name="settings_title_privacy">Privacy</string>
    <string name="settings_title_notifications">Notifications</string>
    <string name="settings_title_synchronization">Synchronization</string>

    <string name="settings_btn_theme">Change theme</string>
    <string name="settings_btn_password">Set protection</string>
    <string name="settings_btn_notifications_sync">Notify about task synchronization</string>
    <string name="settings_btn_notifications_datetime">Notify about future tasks</string>
    <string name="settings_btn_sync_with_google_drive">Sync with Google Drive</string>
    <string name="settings_sync_with_drive_connecting">Connecting to %1$s....</string>
    <string name="settings_sync_failed">Synchronization failed</string>
    <string name="settings_sync_successful">Synchronization configured successfully</string>

    <string name="settings_password_no_protection">No protection</string>
    <string name="settings_password_tap_to_unlock">Tap to unlock</string>
    <string name="settings_password_graphical_key">Graphical key</string>
    <string name="settings_password_password">Password</string>
    <string name="settings_password_fingerprint">Fingerprint</string>

    <string name="protection_action_bar_title">Lock screen protection</string>
    <string name="protection_none">Disable lock screen protection</string>
    <string name="protection_tap">Require tap to unlock</string>
    <string name="protection_graphical">Add graphical key</string>
    <string name="protection_password">Add password</string>
    <string name="protection_fingerprint">Require fingerprint</string>
    <string name="protection_password_empty"/>
    <string name="protection_password_invalid">Password must contain at least 4 characters and contain only letters or symbols _-!@#$</string>
    <string name="protection_create_graphical_btn">Save key</string>
    <string name="protection_create_graphical_title">Add graphical key</string>
    <string name="protection_create_graphical_empty">Graphical key must not be empty</string>
    <string name="protection_create_graphical_simple">Graphical key is too simple</string>
    <string name="protection_create_fingerprint_not_supported">@string/fingerprint_error_hw_not_present</string>
    <string name="protection_create_fingerprint_none">@string/fingerprint_error_no_fingerprints</string>

    <string name="protection_result_none">Lock screen protection disabled</string>
    <string name="protection_result_tap">Tap is now required to unlock</string>
    <string name="protection_result_graphical">Graphical key successfully added</string>
    <string name="protection_result_password">Password successfully added</string>
    <string name="protection_result_fingerprint">Fingerprint protection activated</string>

    <string name="lockscreen_tap_to_unlock">Tap screen to unlock</string>
    <string name="lockscreen_enter_graphical">Enter graphical key to unlock</string>
    <string name="lockscreen_enter_password">Enter password to unlock</string>
    <string name="lockscreen_use_fingerprint">Use fingerprint to unlock</string>
    <string name="lockscreen_use_fingerprint_subtitle">Tap screen to open fingerprint input dialog</string>
    <string name="lockscreen_password_hint">Password</string>
    <string name="lockscreen_password_btn">Enter</string>
    <string name="lockscreen_password_wrong">Wrong password</string>
    <string name="lockscreen_fingerprint_dialog_title">Use fingerprint</string>
    <string name="lockscreen_fingerprint_dialog_description">Touch the fingerprint reader on your device to continue</string>
    <string name="lockscreen_fingerprint_dialog_cancel">Cancel</string>

    <string name="notification_datetime_title">Mirage TODO</string>
    <string name="notification_datetime_description">Task %1$s should be done at %2$s!</string>

    <string name="settings_sync_status_no_sync">Synchronization not configured</string>
    <string name="settings_sync_status_ok">Synchronization enabled with account </string>
    <string name="settings_sync_choose_account_btn">Select synchronization account</string>

    <string name="sync_progress_notification_title">Synchronization with Google Drive....</string>

    <string name="gdrive_acc_picker_title">Select your Google Drive account</string>
    <string name="gdrive_sync_cancelled_toast">Google Drive synchronization cancelled. Try again</string>

    <string name="settings_author">Author: </string>
    <string name="settings_version">Version: </string>

</resources>