<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="protection_none"
        android:title="@string/protection_none"
        android:icon="@drawable/ic_no_protection"/>
    <Preference
        android:key="protection_tap"
        android:title="@string/protection_tap"
        android:icon="@drawable/ic_add_fingerprint"/>
    <Preference
        android:key="protection_graphical"
        android:title="@string/protection_graphical"
        android:icon="@drawable/ic_graphical_key"/>
    <EditTextPreference
        android:key="protection_password"
        android:title="@string/protection_password"
        android:icon="@drawable/ic_password"/>
    <Preference
        android:key="protection_fingerprint"
        android:title="@string/protection_fingerprint"
        android:icon="@drawable/ic_fingerprint"/>

</PreferenceScreen>