<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_task_content_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_task_title_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:text="@string/edit_task_title_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edit_task_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:ems="10"
        android:hint="@string/edit_task_title_hint"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/edit_task_description_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:text="@string/edit_task_description_title"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/edit_task_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="16dp"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/edit_task_description_hint"
        android:inputType="textMultiLine"
        android:minHeight="200dp"
        android:textSize="20sp" />

    <include layout="@layout/layout_edit_task_tags" />
    <include layout="@layout/layout_edit_task_location" android:visibility="gone"/>
    <include layout="@layout/layout_edit_task_datetime" />
</LinearLayout>