<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/todolist_body_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:gravity="top"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <Button
        android:id="@+id/todolist_footer_archive_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:drawableTop="@drawable/ic_nav_archive"
        android:text="@string/footer_archive_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/todolist_footer_todo_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/todolist_footer_todo_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFC107"
        android:drawableTop="@drawable/ic_nav_todo"
        android:text="@string/footer_todo_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/todolist_footer_done_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/todolist_footer_archive_btn" />

    <Button
        android:id="@+id/todolist_footer_done_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#4CAF50"
        android:drawableTop="@drawable/ic_nav_done"
        android:text="@string/footer_done_btn"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/todolist_footer_todo_btn" />

    <include
        layout="@layout/todolist_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/todolist_footer_todo_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/todolist_new_task_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/footer_new_task_btn"
        android:focusable="true"
        app:layout_constraintBottom_toTopOf="@+id/todolist_footer_todo_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_drawer_tags" />
</androidx.constraintlayout.widget.ConstraintLayout>